--- a/pattern.html
+++ b/pattern.html
@@ -74,7 +74,7 @@
                 <!-- NEWS 1 -->
                 <div class="news">
                     <div class="news-image">
-                        <img class="img1" src="/Images/news2.jpg" alt="Gençlik bakanlığı">
+                        <img class="img1" src="./Images/news1.jpg" alt="Gençlik bakanlığı">
                         <span>GSB</span>
                     </div>
                     <div class="news-info">
@@ -86,10 +86,10 @@
                         <div class="rating">Yıl | 2016</div>
                     </div>
                 </div>
-                <!-- NEWS 2 -->
+                <!-- NEWS 2 --> 
                 <div class="news">
                     <div class="news-image">
-                        <img class="img2" src="/Images/news2.jpg" alt="KMÜ Konser">
+                        <img class="img2" src="./Images/news2.jpg" alt="KMÜ Konser">
                         <span>KMÜ</span>
                     </div>
                     <div class="news-info">
