--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
                 <h1 class="heading-small">SheyZam</h1>
                 <ul>
                     <li><a href="#home">Home</a></li>
-                    <li><a href="#games">Games</a></li>
-                    <li><a href="#videos">Videos</a></li>
-                    <li><a href="#contacts">Contacts</a></li>
+                    <li><a href="#gaming">Gaming</a></li>
+                    <li><a href="#news">News</a></li>
+                    <li><a href="#contact">Contacts</a></li>
                 </ul>
             </nav>
         </div>
@@ -40,7 +40,7 @@
         <img src="/Images/deneme2.jpg" alt="SheyZam">
         <div class="name text-center">
             <h2 class="heading-big">SheyZam</h2>
-            <p>Hazem Kataie | Influencer</p>
+            <p>Hazem Kataie | Developer</p>
             <a href="#Socialmedia" class="btn btn-primary">Social Media</a>
         </div>
     </section>
@@ -106,24 +106,24 @@
     <footer id="contact" class="bg-dark-red">
         <div class="contact-form">
             <form>
-                <h4 class="text-center heading-medium">Bana Ulaşın</h4>
+                <h4 class="text-center heading-medium">Contact Me</h4>
                 <div class="form-group">
                     <label for="name">İsim</label>
-                    <input type="text" class="form-control" name="name" id="name" placeholder="isim">
+                    <input type="text" class="form-control" name="name" id="name" placeholder="fullname">
                 </div>
                 <div class="form-group">
                     <label for="email">E-mail</label>
                     <input type="text" class="form-control" name="email" id="email" placeholder="email">
                 </div>
-                <textarea name="message" id="message" rows="5" class="form-control" placeholder="Mesajınız"></textarea>
-                <button type="submit" class="btn btn-block">Gönder</button>
+                <textarea name="message" id="message" rows="5" class="form-control" placeholder="Message"></textarea>
+                <button type="submit" class="btn btn-block">Send</button>
 
             </form>
 
             <ul>
-                <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-                <li><a href="#"><i class="fab fa-linkedin"></i></a></li>
+                <li><a href="https://twitter.com/hazemkataie" target="_blank" title="twitter linki"><i class="fab fa-twitter"></i></a></li>
+                <li><a href="https://www.instagram.com/hazemkataie/" target="_blank" title="instagram linki"><i class="fab fa-instagram"></i></a></li>
+                <li><a href="https://www.linkedin.com/in/hazemkataie/"><i class="fab fa-linkedin" target="_blank" title="linkedin linki"></i></a></li>
             </ul>
 
         </div>
