--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
 </head>
 
 <body>
+    <section id="home">
+        <img id="profil" src="/Images/deneme2.jpg" alt="SheyZam">
+        <div class="name text-center">
+            <h2>CE | Web Developer</h2>
+        </div>
+    </section>
     <header class="bg-dark-red">
         <div class="container">
             <nav id="navbar">
@@ -36,16 +42,8 @@
             </nav>
         </div>
     </header>
-    <section id="home">
-        <img src="/Images/deneme2.jpg" alt="SheyZam">
-        <div class="name text-center">
-            <h2 class="heading-big">SheyZam</h2>
-            <p>Hazem Kataie | Developer</p>
-            <a href="#Socialmedia" class="btn btn-primary">Social Media</a>
-        </div>
-    </section>
 
-    <section id="gaming" class="bg-dark-red">
+    <!-- <section id="gaming" class="bg-dark-red">
         <h3 class="text-center heading-medium">Gaming</h3>
         <div class="items">
             <article class="item">
@@ -66,7 +64,8 @@
                 <p>CS:GO'nun eş zamanlı rekabetine hazır mısınız?</p>
             </article>
         </div>
-    </section>
+    </section> -->
+    
     <section id="news">
         <h3 class="text-center heading-medium">News</h3>
         <div class="container">
