--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
+    <link href='https://fonts.googleapis.com/css?family=Vibur:400' rel='stylesheet' type='text/css'>
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
     <link rel="stylesheet" href="./global.css">
@@ -32,7 +33,7 @@
     <header class="bg-dark-red">
         <div class="container">
             <nav id="navbar">
-                <h1 class="heading-small">SheyZam</h1>
+                <h1 class="heading-small-sheyzam">SheyZam</h1>
                 <ul>
                     <li><a href="#home">Home</a></li>
                     <li><a href="#gaming">Gaming</a></li>
